--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@firebase/app": "^0.4.1",
     "@firebase/auth": "^0.11.2",
     "@firebase/firestore": "^1.3.1",
+    "dotenv": "^8.0.0",
     "google-maps": "^3.2.1"
   },
   "devDependencies": {
@@ -39,7 +40,7 @@
     "koa-connect": "^2.0.1",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.12.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
